# cc-demon

./: .gitignore  Cargo.toml  README.md
.claude-plugin/: plugin.json
agents/: prompt-designer.md
commands/: config.md  schedule.md  start.md  status.md  stop.md
hooks/: hooks.json
scripts/: install.sh  session-check.sh  uninstall.sh
skills/daemon-ops/: SKILL.md
skills/daemon-ops/references/: config-reference.md
src/: logging.rs  main.rs
src/cli/: commands.rs  mod.rs
src/config/: mod.rs
src/daemon/: mod.rs
src/formatter/: markdown_v2.rs  mod.rs  plain.rs  splitter.rs
src/gateway/: mod.rs  telegram_client.rs
src/output/: mod.rs
src/scheduler/: mod.rs
src/session/: manager.rs  mod.rs  tmux.rs
src/task/: mod.rs
