[package]
name = "cc-demon"
version = "0.1.0"
edition = "2021"
description = "Daemon scheduler and Telegram gateway for Claude Code"
license = "Apache-2.0"
authors = ["Phu Nguyen"]

[[bin]]
name = "demon"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Scheduling
cron = "0.13"
chrono = { version = "0.4", features = ["serde"] }

# Telegram
teloxide = { version = "0.13", features = ["macros"] }

# Config
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Daemon
daemonize = "0.5"
nix = { version = "0.29", features = ["signal", "process"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Misc
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "6"
anyhow = "1"
thiserror = "2"
async-trait = "0.1"
